--- a/app/src/main/res/menu/gallery_menu.xml
+++ b/app/src/main/res/menu/gallery_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:title="Delete all"
         android:id="@+id/action_delete_all"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/delete"/>
 </menu>
